fix: z-index header and main

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@ header {
   display: flex;
   align-items: center;
   background-color: var(--backgroundColor);
+  z-index: 1 !important;
 }
 
 .header {
